--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -2,6 +2,7 @@
 $main-background: #111111;
 $grey-background: #424242;
 $dark-grey-background: #303030;
+$darker-grey-background: #202020;
 $red-background: #f05858;
 $dark-red-background: #ed3737;
 
@@ -14,6 +15,7 @@ $dark-grey: #4c4c4c;
 $black: #000000;
 $red: #f26b6b;
 $dark-red: #930d0d;
+$white: #ffffff;
 
 // Weights
 $bold: 700;
