--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -12,13 +12,23 @@ $srl-blue: #305ab2;
 $srl-orange: #e09456;
 $grey: #bec7d2;
 $dark-grey: #4c4c4c;
+$coal-grey: #2C2C2C;
 $black: #000000;
 $red: #f26b6b;
 $dark-red: #930d0d;
 $white: #ffffff;
+$royal-blue: #3c70df;
+$dark-blue: #102A63;
+$mustard: #a1934f;
+$dark-brown: #302c17;
+$green: #296b28;
+$dark-green: #162815;
 
 // Weights
 $bold: 700;
 
 // Fonts
-$font-family-base: 'Roboto', Helvetica, Arial, sans-serif;
+$font-family-base: 'Roboto',
+Helvetica,
+Arial,
+sans-serif;
