Add footer to layout

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -13,6 +13,7 @@ $srl-orange: #e09456;
 $grey: #bec7d2;
 $dark-grey: #4c4c4c;
 $coal-grey: #2C2C2C;
+$grey-darker:#808080;
 $black: #000000;
 $red: #f26b6b;
 $dark-red: #930d0d;
