styling gamelist page. also restructured a few other things

--- a/src/css/grid.scss
+++ b/src/css/grid.scss
@@ -875,6 +875,10 @@
     margin-left: 0%;
   }
 }
+.padding-md {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .clearfix,
 .clearfix:before,
 .clearfix:after,
