--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -18,6 +18,12 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     display: inline-block;
 
+    &.btn-large {
+        font-size: em(15);
+        line-height: 1.75;
+        width: 234px;
+    }
+
     &:hover {
         color: $white;
     }
