--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,12 +4,12 @@ footer {
     background: linear-gradient(to top,$main-background, $darker-grey-background);
     color: $grey-darker;
     font-size: em(12);
-    margin-top: 27px;
     border-top: 1px $coal-grey dotted;
     position: absolute;
-    right: 0;
     bottom: 0;
     left: 0;
+    width: 100%;
+    height:$footer-height;
     div {
         padding: 5px;
     }
