--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,7 +8,7 @@ footer {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    right: 0;
     height:$footer-height;
     div {
         padding: 5px;
@@ -16,7 +16,6 @@ footer {
 }
 
 .linktext {
-    padding: 0px 5px;
     text-decoration: none;
     color: inherit;
      :hover {
