--- a/src/routes/landing/landing.scss
+++ b/src/routes/landing/landing.scss
@@ -10,4 +10,7 @@ body {
     background-color: $main-background;
     font-family: $font-family-base;
     color: $grey;
+    #wrap{
+        margin-bottom:60px;
+    }
 }
