using new api route for gamelist. added logic to gamelist component. added past results page route

--- a/src/routes/landing/landing.scss
+++ b/src/routes/landing/landing.scss
@@ -5,4 +5,8 @@ body {
     background-color: $main-background;
     font-family: $font-family-base;
     color: $grey;
+
+    a {
+        color: $grey;
+    }
 }
