--- a/src/components/gameList/gameList.scss
+++ b/src/components/gameList/gameList.scss
@@ -2,11 +2,22 @@
 @import '../../css/mixins';
 
 .gameList {
+    .letterPicker {
+        letter-spacing: 5px;
+        text-align: center;
+
+        a {
+            text-decoration: none;
+            padding: 3px 0 3px 5px;
+            font-weight: $bold;
+        }
+    }
     .alphaList {
         height: 600px;
         overflow-y: scroll;
         border-top: 2px $grey-background solid;
         border-bottom: 2px $grey-background solid;
+        margin-top: 8px;
 
         ul {
             list-style: none;
