--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -23,6 +23,7 @@ $dark-blue: #102A63;
 $mustard: #a1934f;
 $dark-brown: #302c17;
 $green: #296b28;
+$fern-green: #1D4A1C;
 $dark-green: #162815;
 
 // Weights
