--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -8,6 +8,7 @@ $dark-red-background: #ed3737;
 
 // Colors
 $srl-yellow: #f7e279;
+$srl-yellow-dark:#d2c067;
 $srl-blue: #305ab2;
 $srl-orange: #e09456;
 $grey: #bec7d2;
@@ -34,6 +35,7 @@ $font-family-base: 'Roboto',
 Helvetica,
 Arial,
 sans-serif;
+$font-size-base: 14;
 
 //Sizes
 $footer-height:35px;
