--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -1,4 +1,4 @@
-$browser-context: 16; // Default font size
+$browser-context: $font-size-base; // Default font size
 
 @function em($pixels, $context: $browser-context) {
   @return #{$pixels/$context}em;
