--- a/src/routes/landing/landing.scss
+++ b/src/routes/landing/landing.scss
@@ -9,7 +9,7 @@ body {
     margin: 0 0 $footer-height 0;
     background-color: $main-background;
     font-family: $font-family-base;
-    font-size: em($font-size-base);
+    font-size: #{$font-size-base}px;
     color: $grey;
 
     a {
