command list page cleanup closes #47

--- a/src/components/commandList/commandList.scss
+++ b/src/components/commandList/commandList.scss
@@ -1,12 +1,13 @@
  @import '../../css/variables';
 
  .commandList {
-     .border-under {
-         border-bottom: 1px dotted $dark-grey;
-         padding-bottom: 4px;
-     }
-     .grey {
+     span {
+         float: right;
          color: $grey-darker;
          text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+     }
+     h2{
+         border-bottom: 1px dotted $dark-grey;
+         padding-bottom: 4px;
      }
  }
