--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -36,6 +36,7 @@ Helvetica,
 Arial,
 sans-serif;
 $font-size-base: 14;
+$text-shadow-base: 1px 1px 0px rgba(0, 0, 0, 0.5);
 
 //Sizes
 $footer-height:35px;
