--- a/src/components/faqHeader/faqHeader.scss
+++ b/src/components/faqHeader/faqHeader.scss
@@ -4,7 +4,7 @@ nav {
 
     .faqHeader{
         float: left;
-        margin:20px 0;
+        margin:20px 0 0;
         a {
             margin: 5px 15px 0 0;
         }
