Add back to top button to FAQ. Closes #62

--- a/src/routes/landing/landing.scss
+++ b/src/routes/landing/landing.scss
@@ -49,4 +49,9 @@ body {
     .wrap{
         margin-bottom:60px;
     }
+
+    .dull {
+        color: $grey-darker;
+        text-shadow: $text-shadow-base;
+    }
 }
