Add active class for main header navigation

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -18,6 +18,7 @@ $grey-darker:#808080;
 $black: #000000;
 $red: #f26b6b;
 $dark-red: #930d0d;
+$brick-red: #a03b3b;
 $white: #ffffff;
 $royal-blue: #3c70df;
 $dark-blue: #102A63;
