--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -18,6 +18,31 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     display: inline-block;
 
+    &.active-red{
+      background: linear-gradient(to bottom, $brick-red, darken($brick-red, 25%));
+      box-shadow: none;
+    }
+
+    &.active-blue{
+      background: linear-gradient(to bottom, $dark-blue, darken($dark-blue,10%));
+      box-shadow: none;
+    }
+
+    &.active-yellow{
+      background: linear-gradient(to bottom, $dark-brown, darken($dark-brown,10%));
+      box-shadow: none;
+    }
+
+    &.active-green{
+      background: linear-gradient(to bottom, $dark-green, darken($dark-green,5%));
+      box-shadow: none;
+    }
+
+    &.active-grey{
+      background: linear-gradient(to bottom, $coal-grey,darken($coal-grey,10%));
+      box-shadow: none;
+    }        
+
     &.btn-large {
         font-size: em(15);
         line-height: 1.75;
