--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -27,6 +27,8 @@ $dark-brown: #302c17;
 $green: #296b28;
 $fern-green: #1D4A1C;
 $dark-green: #162815;
+$khaki: #C7AE8E;
+$sepia: #9d683c;
 
 // Weights
 $bold: 700;
