--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -3,3 +3,25 @@ $browser-context: $font-size-base; // Default font size
 @function em($pixels, $context: $browser-context) {
   @return #{$pixels/$context}em;
 }
+
+@mixin srlPanel($width, $height){
+  border-radius: 4px;
+  width: $width;
+  height: $height;
+  border-width: 1px 0px 1px 1px;
+  border-style: solid;
+  border-color: $dark-grey $black $black $dark-grey;
+  background: $dark-grey-background;
+  background-image:linear-gradient($dark-grey-background, darken($dark-grey-background,6%));
+  box-shadow: 1px 1px 2px $black;
+}
+
+@mixin gameThumbnail($width, $height){
+    border-radius: 8px;
+    border: solid 1px $black;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+    float: left;
+    margin-right: 6px;
+    height: 100%;
+    width: $width;
+}
