--- a/src/routes/landing/routes/faq/routes/glossary/components/glossary/glossary.scss
+++ b/src/routes/landing/routes/faq/routes/glossary/components/glossary/glossary.scss
@@ -1,5 +1,5 @@
-@import '../../../../css/variables';
-@import '../../../../css/mixins';
+@import '~css/variables';
+@import '~css/mixins';
 
 $word-padding: 30px;
 
