--- a/src/routes/races/components/popularGame/popularGame.scss
+++ b/src/routes/races/components/popularGame/popularGame.scss
@@ -1,5 +1,5 @@
-@import '../../../../css/variables';
-@import '../../../../css/mixins';
+@import '~css/variables';
+@import '~css/mixins';
 .popularList {
   ul {
     padding-left: 0;
