--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -1,5 +1,5 @@
-@import '../../css/variables';
-@import '../../css/mixins';
+@import '~css/variables';
+@import '~css/mixins';
 
 .btn {
     width: 108px;
