--- a/src/routes/landing/components/donations/donations.scss
+++ b/src/routes/landing/components/donations/donations.scss
@@ -1,5 +1,5 @@
-@import '../../../../css/variables.scss';
-@import '../../../../css/mixins.scss';
+@import '~css/variables.scss';
+@import '~css/mixins.scss';
 .donations{
   font-size: em(11);
   text-align: center;
