--- a/src/routes/landing/components/footer/footer.scss
+++ b/src/routes/landing/components/footer/footer.scss
@@ -1,5 +1,5 @@
-@import '../../../../css/variables';
-@import '../../../../css/mixins';
+@import '~css/variables';
+@import '~css/mixins';
 
 footer {
     background: linear-gradient(to top,$main-background, $darker-grey-background);
