Added sort to topracers leaderboard Closes #117

--- a/src/routes/landing/routes/races/routes/raceStats/components/topRacers/topRacers.scss
+++ b/src/routes/landing/routes/races/routes/raceStats/components/topRacers/topRacers.scss
@@ -2,4 +2,11 @@
 
 .top-racers{
   @include srlTable();
+  th.rank {width: 10%}
+  th.name {width: 35%}
+  th.races {width: 10%}
+  th.wins {width: 10%}
+  th.time {width: 25%}
+  th.games {width: 10%}
+
 }
