--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -35,6 +35,7 @@ $browser-context: $font-size-base; // Default font size
     background-color: $coal-grey;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     border-spacing: 0px;
+    width: 100%;
     
     th,td {
       padding: 3px 6px;
@@ -66,13 +67,10 @@ $browser-context: $font-size-base; // Default font size
       background: linear-gradient($dark-red, darken($dark-red,6%));
       th:first-child {border-radius: 4px 0 0 0;}
       th:last-child  {border-radius: 0 4px 0 0;}
-      th:hover{
+      th:hover.clickable {
+        cursor: pointer;
         background:rgba(240, 240, 240, .2);;
       }
     }
-
-
-
-
   }
 }
