initial game page and past races. Closes #110

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -22,11 +22,13 @@ $brick-red: #a03b3b;
 $white: #ffffff;
 $royal-blue: #3c70df;
 $dark-blue: #102A63;
+$tory-blue:#1448b3;
 $mustard: #a1934f;
 $dark-brown: #302c17;
 $green: #296b28;
 $fern-green: #1D4A1C;
 $dark-green: #162815;
+$green-light: #52d64f;
 $khaki: #C7AE8E;
 $sepia: #9d683c;
 
