--- a/src/css/buttons.scss
+++ b/src/css/buttons.scss
@@ -17,6 +17,7 @@
     border-color: $dark-grey $black $black $dark-grey;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     display: inline-block;  
+    cursor: pointer;
 
     &.btn-large {
         font-size: em(15);
