--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -1,12 +1,10 @@
 @import '~css/variables';
-
 $browser-context: $font-size-base; // Default font size
-
 @function em($pixels, $context: $browser-context) {
   @return #{$pixels/$context}em;
 }
 
-@mixin srlPanel($width, $height){
+@mixin srlPanel($width, $height) {
   border-radius: 4px;
   width: $width;
   height: $height;
@@ -14,21 +12,21 @@ $browser-context: $font-size-base; // Default font size
   border-style: solid;
   border-color: $dark-grey $black $black $dark-grey;
   background: $dark-grey-background;
-  background-image:linear-gradient($dark-grey-background, darken($dark-grey-background,6%));
+  background-image: linear-gradient($dark-grey-background, darken($dark-grey-background, 6%));
   box-shadow: 1px 1px 2px $black;
 }
 
-@mixin gameThumbnail($width, $height){
-    border-radius: 8px;
-    border: solid 1px $black;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-    float: left;
-    margin-right: 6px;
-    height: 100%;
-    width: $width;
+@mixin gameThumbnail($width, $height) {
+  border-radius: 8px;
+  border: solid 1px $black;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  float: left;
+  margin-right: 6px;
+  height: 100%;
+  width: $width;
 }
 
-@mixin srlTable(){
+@mixin srlTable() {
   table {
     margin-bottom: 16px;
     border-radius: 4px;
@@ -36,41 +34,75 @@ $browser-context: $font-size-base; // Default font size
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     border-spacing: 0px;
     width: 100%;
-    
-    th,td {
+    min-width: 400px;
+    border-collapse: collapse;
+    overflow: hidden;
+    th,
+    td {
       padding: 3px 6px;
       text-align: center;
     }
-
-    tr.odd-row{
-     background-color: darken($coal-grey,3%);
+    tr:nth-child(even) {
+      background-color: darken($coal-grey, 2%);
     }
-
-    th.game-name {text-align: left;
-      padding-left: 8px;
-      font-weight: $bold;
-      text-shadow: $text-shadow-base;
-      column-span: all;
+    tr.sub-header {
+      background: linear-gradient(darken($dark-red, 16%), darken($dark-red, 23%));
+      border-top: 1px solid darken($dark-red, 11%);
+      .goal{
+        text-align: left;
+        color: lighten($grey,6%);
+      }
+      .date{
+        text-align: right;
+        font-size: 85%;
+        color: $brick-red;
+        text-align: right;
+        white-space: nowrap;
+      }
     }
-
-    th.race-goal {
-      color: $srl-yellow;
-      text-shadow: $text-shadow-base;
-      font-weight: $bold;
-      column-span: all;
-    }
-
     tr.leaderboard {
       color: #ffffff;
       text-shadow: $text-shadow-base;
       font-weight: 700;
-      background: linear-gradient($dark-red, darken($dark-red,6%));
-      th:first-child {border-radius: 4px 0 0 0;}
-      th:last-child  {border-radius: 0 4px 0 0;}
+      background: linear-gradient($dark-red, darken($dark-red, 6%));
+      th:first-child {
+        border-radius: 4px 0 0 0;
+      }
+      th:last-child {
+        border-radius: 0 4px 0 0;
+      }
       th:hover.clickable {
         cursor: pointer;
-        background:rgba(240, 240, 240, .2);;
+        background: rgba(240, 240, 240, .2);
       }
+    }
+    th.race-id {
+      text-align: right;
+      color:$grey;
+    }
+    th.game-name {
+      text-align: left;
+      padding-left: 8px;
+      font-weight: $bold;
+      text-shadow: $text-shadow-base;
+      column-span: all;
+      a {
+        text-decoration: none;
+        color: $srl-yellow;
+        &:hover {
+          color: white;
+        }
+      }
+    }
+
+    .first {
+      color: $srl-yellow;
+    }
+    .second {
+      color: $grey;
+    }
+    .third {
+      color: $srl-orange;
     }
   }
 }
