Add stats to game page. Closes #128

--- a/src/css/utils.scss
+++ b/src/css/utils.scss
@@ -9,3 +9,8 @@
     color: $grey-darker;
     text-shadow: $text-shadow-base;
   }
+  
+  //used by injected HTML from game rules.
+  .red {
+    color:$red-background;
+  }
