--- a/src/routes/landing/routes/game/components/gameImage/gameImage.scss
+++ b/src/routes/landing/routes/game/components/gameImage/gameImage.scss
@@ -1,5 +1,5 @@
 .game-image {
-  @at-root object#{&},img {
+  img, object {
     width:100%;
     margin-top: 55px;
     border-radius: 3px;
@@ -8,7 +8,7 @@
 
 @media only screen and (max-width:991px) {
   .game-image {
-    @at-root object#{&},img {
+    img, object {
       width:60%;
     }
   }
