--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -16,11 +16,10 @@ $browser-context: $font-size-base; // Default font size
   box-shadow: 1px 1px 2px $black;
 }
 
-@mixin gameThumbnail($width, $height) {
+@mixin imageThumbnail($width, $height) {
   border-radius: 8px;
   border: solid 1px $black;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-  float: left;
   margin-right: 6px;
   height: 100%;
   width: $width;
