--- a/src/routes/landing/routes/streams/components/streamListItem/streamListItem.scss
+++ b/src/routes/landing/routes/streams/components/streamListItem/streamListItem.scss
@@ -6,7 +6,8 @@
   margin: 10px 5px 0 14px;
   padding: 5px;
   .stream-icon {
-    @include gameThumbnail(null, 100%);
+    float: left;
+    @include imageThumbnail(null, 100%);
   }
   .stream-info {
     position: relative;
