Add stats to player page and other cleanup. Closes #141

--- a/src/routes/landing/routes/profile/components/playerGameList/playerGameList.scss
+++ b/src/routes/landing/routes/profile/components/playerGameList/playerGameList.scss
@@ -1,6 +1,10 @@
 @import '~css/variables';
 
 .player-game-list {
+  .selected {
+    background-color: lighten($main-background, 3%);
+  }
+
   a {
     &:first-child {
       margin-bottom: 8px;
