--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -21,7 +21,7 @@ $browser-context: $font-size-base; // Default font size
   border: solid 1px $black;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   margin-right: 6px;
-  height: 100%;
+  height: $height;
   width: $width;
 }
 
