Mostly Finished - scrollable Live Races page.

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -23,6 +23,7 @@ $white: #ffffff;
 $royal-blue: #3c70df;
 $dark-blue: #102A63;
 $tory-blue:#1448b3;
+$tory-blue-dark: #12264d;
 $mustard: #a1934f;
 $dark-brown: #302c17;
 $green: #296b28;
