--- a/src/routes/landing/routes/profile/components/playerGameList/playerGameList.scss
+++ b/src/routes/landing/routes/profile/components/playerGameList/playerGameList.scss
@@ -2,7 +2,7 @@
 
 .player-game-list {
   .selected {
-    background-color: lighten($main-background, 3%);
+    background-color: $tory-blue-dark;
   }
 
   a {
